[package]
name = "nano"
version = "1.0.0"
edition = "2021"
description = "Security Based Blockchain Node"

[lib]
name = "nano"
doctest = false

[workspace]
members = [
    "src/nano_serial",
    "src/nano_serial/derive",
    "src/nano_serial/derive-internal",
]

[dependencies]
libc = "0.2.147"
log = "0.4.19"
thiserror = "1.0.43"
async-std = {version = "1.12.0", features = ["attributes"], optional = true}
async-trait = {version = "0.1.71", optional = true}
futures = {version = "0.3.28", optional = true}
smol = {version = "1.3.0", optional = true}
async-rustls = {version = "0.4.0", features = ["dangerous_configuration"], optional = true}
socket2 = {version = "0.5.3", optional = true, features = ["all"]}
arti-client = {version = "0.9.2", default-features = false, features = ["async-std", "rustls", "onion-service-client"], optional = true}
tor-hscrypto = {version = "0.3.0", optional = true}
ed25519-compact = {version = "2.0.4", optional = true}
rcgen = {version = "0.11.1", optional = true}
rustls-pemfile = {version = "1.0.3", optional = true}
x509-parser = {version = "0.15.0", features = ["validate", "verify"], optional = true}
bs58 = {version = "0.5.0", optional = true}
serde_json = {version = "1.0.102", optional = true}
serde = {version = "1.0.171", features = ["derive"], optional = true}
semver = {version = "1.0.17", optional = true}
structopt = {version= "0.3.26", optional = true}
structopt-toml = {version= "0.5.1", optional = true}
toml = {version = "0.7.6", optional = true}
dashu = {version = "0.3.1", optional = true}

chrono = {version = "0.4.26", optional = true}
nano_serial = {path = "src/nano_serial", optional = true}
nano_derive = {path = "src/nano_serial/derive", optional = true}
nano_derive_internal = {path = "src/nano_serial/derive-internal", optional = true}
itertools = {version = "0.11.0", optional = true}
lazy_static = {version = "1.4.0", optional = true}

url = {version = "2.4.0", features = ["serde"], optional = true}

simplelog = {version = "0.12.1", optional = true}

rand = {version = "0.8.5", optional = true}
blake3 = {version = "1.4.1", features = ["rayon"], optional = true}
crypto_api_chachapoly = {version = "0.5.0", optional = true}
halo2_proofs = {version = "0.3.0", optional = true}
halo2_gadgets = {version = "0.3.0", optional = true}
wasmer = {version = "4.0.0", optional = true}
wasmer-compiler-singlepass = {version = "4.0.0", optional = true}
wasmer-middlewares = {version = "4.0.0", optional = true}
rusqlite = {version = "0.29.0", features = ["bundled-sqlcipher-vendored-openssl"], optional = true}
libsqlite3-sys = {version = "0.26.0", features = ["bundled-sqlcipher-vendored-openssl"], optional = true}
sled = {version = "0.34.7", optional = true}
sled-overlay = {version = "0.0.7", optional = true}

[dev-dependencies]
clap = {version = "4.3.11", features = ["derive"]}
halo2_proofs = {version = "0.3.0", features = ["dev-graph", "gadget-traces", "sanity-checks"]}
halo2_gadgets = {version = "0.3.0", features = ["test-dev-graph", "test-dependencies"]}
plotters = "0.3.5"
easy-parallel = "3.3.0"
prettytable-rs = "0.10.0"

